# LogoMesh

./: .babelrc  .dockerignore  .editorconfig  .env.example  .eslintrc.json  .gitattributes  .gitignore  .gitmodules  .prettierrc  .replit  2025-10-22_jules_opinion_on_logomesh_reset.md  2025-11-06_AgentX_Signup_Form.md  2025-11-07_Judge_Simulation_Prompt.md  20251124-Contextual-Discovery-Plan.md  20260127-Session-Review-Video-Plan-and-Cleanup.md  AGENTS.md  AgentBeats_Submission_Audit_Log.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONCEPT_SUMMARY.md  CONTEXT_PROMPT.md  CONTRIBUTING.md  DOCUMENTATION_SUMMARY.txt  Dockerfile  Dockerfile.gpu  Dockerfile.green  Dockerfile.purple  Dockerfile.sandbox  Dual-Track-Arena-Doc-Update-Plan-20260130.md  ENVIRONMENT_BUG_REPORT.md  FINAL_PHASE_LOG.md  GAP_ANALYSIS_REPORT.md  Instructions for Final Test Run.txt  JUDGES_START_HERE.md  LICENSE  LogoMesh Phase 1 Demo.txt  Makefile  Moltbook_Refactor_Evaluation.md  ONBOARDING_START_HERE.md  PROJECT_PLAN.md  (+71 more)
.claude/: settings.local.json
.github/: pull_request_template.md
Project Phoenix/: Analyzing LogoMesh for Breakthrough Potential.txt  Google Gemini - Project LogoMesh_ Next Steps.md  Google Gemini - Re-evaluating Deep Research Report.txt  LogoMesh Hard Reset Foundational Plan.txt  LogoMesh Project Strategy and Outreach.md  LogoMesh Project Strategy and Outreach.txt  PHASE_1.5_FOUNDATION_HARDENING.md  technical-due-diligence-report.txt
attached_assets/: 05.25.2025 LogoMesh-Core – End Vision Phase 1 Mermaid 2.md  05.26.2025 PHASE 1 v3.0.md  06.09.2025 Latent Manipulator README.md  06.17. 2025 LogoMesh Chat-GPT Ideas_1750233338543.md  Corrective Prompt 1.md  How Palantir Is Watching You Right Now_1750271198469.txt  Pasted--API-Service-Using-API-base-URL-http-localhost-3001-api-v1-Development-mode-API-request-failed--1748508061600.txt  Pasted--API-request-failed-for-thoughts-TypeError-columnNumber-1-fileName-lineNumbe-1748484612396.txt  Pasted--API-request-failed-for-thoughts-TypeError-t-https-7eb0b03c-e5c5-4566-8f8b-bba701e01cde-00--1748507602830.txt  Pasted--ARCHIVIST-REBOOT-PROMPT-Memory-Sovereign-Mode-You-are-The-Project-Archivist-memory-1751588362214_1751588362214.txt  Pasted--ARCHIVIST-REBOOT-PROMPT-Memory-Sovereign-Mode-You-are-The-Project-Archivist-memory-sovereign-of-1751588307639_1751588307639.txt  Pasted--Brutal-Honest-Review-v4-This-Is-Almost-Ship-Able-You-ve-slain-90-of-the-dragon-What-s-l-1751008862048_1751008862048.txt  Pasted--Brutal-Honest-Review-v5-Micro-Deltas-Then-Ship-You-re-95-locked-Below-are-the-last-rat-1751009150391_1751009150392.txt  Pasted--Brutal-Mode-Review-v3-Ready-for-Claude-Ingestion-You-finally-pruned-the-beast-into-something--1751007945697_1751007945698.txt  Pasted--Brutally-Honest-Assessment-You-ve-definitely-internalized-the-last-round-of-feedback-the-plan--1751007640615_1751007640615.txt  Pasted--Create-docs-DATA-MIGRATION-md-Add-the-following-content-markdown--1747200044850.txt  Pasted--Hello-Claude-We-need-your-help-to-diagnose-and-fix-issues-within-our-Replit-project-s-testing--1750497724785_1750497724785.txt  Pasted--How-LogoMesh-can-become-the-anti-Palantir-Palantir-s-playbook-The-counter-stance-LogoMe-1750271185769_1750271185769.txt  Pasted--I-want-to-revise-the-Phase-2-draft-to-make-it-explicitly-clear-that-every-system-is-being-prepar-1748851566364.txt  Pasted--RERUN-rerun-failed-src-utils-tests-VoiceInputManager-test-js-5-tests-5-failed-11ms--1750480641904_1750480641904.txt  Pasted--Story-10-Mind-Arena-Multiplayer-Debate-Idea-Forge-Context-recap-After-nailing-solo--1748935697190.txt  Pasted--Story-3-Library-Latency-Tango-Setup-Liam-turns-his-water-cooled-Threadripper-PC-into-a-1748932085936.txt  Pasted--Story-4-Dice-Dragons-and-a-Dead-Zone-LAN-Setup-Dungeon-Master-Valerie-runs-her-weekl-1748932281780.txt  (+62 more)
core/: config.ts  (+3 more)
(+2057 files in other folders)
