[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentbeats-tutorial"
version = "0.1.0"
description = "Agentbeats Tutorial"
readme = "README.md"
requires-python = ">=3.11,<3.14"  # ray 2.53.0 requires 3.11-3.13; vllm needs 3.11+
dependencies = [
    "a2a-sdk>=0.3.5",              # Agent-to-Agent protocol
    "docker>=7.0.0",                # Container orchestration
    "google-adk>=1.14.1",           # Google AI Development Kit
    "google-genai>=1.36.0",         # Google Generative AI
    "openai>=2.8.1",                # OpenAI API client
    "pydantic>=2.11.9",             # Data validation
    "python-dotenv>=1.1.1",         # Environment management
    "uvicorn>=0.35.0",              # ASGI server
    "vllm>=0.6.0,<0.7.0 ; sys_platform == 'linux'",  # LLM inference - with surgical fix to config.json
    "sentence-transformers>=3.0.0", # Embedding models for CIS computation
    "scipy>=1.10.0",                # Scientific computing (cosine similarity, KL divergence)
]

[project.scripts]
agentbeats-run = "agentbeats.run_scenario:main"

[tool.uv]
package = true
dev-dependencies = [
    "mypy>=1.18.1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/agentbeats"]
