[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentbeats-tutorial"
version = "0.1.0"
description = "Agentbeats Tutorial"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "a2a-sdk>=0.3.5",
    "docker>=7.0.0",
    "google-adk>=1.14.1",
    "google-genai>=1.36.0",
    "openai>=2.8.1",
    "pydantic>=2.11.9",
    "python-dotenv>=1.1.1",
    "uvicorn>=0.35.0",
    "vllm>=0.6.0 ; sys_platform == 'linux'",
    "sentence-transformers>=3.0.0",
    "scipy>=1.10.0",
    "pytest>=8.0.0",
]

[project.scripts]
agentbeats-run = "agentbeats.run_scenario:main"

[tool.uv]
package = true
dev-dependencies = [
    "mypy>=1.18.1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/agentbeats"]
